feat: users can follow each other
