# internal/modules/user/routes.go
@@ -8,14 +8,18 @@ import (
 )
 
 // RegisterRoutes registers all user-related routes
-func RegisterRoutes(router fiber.Router, userHandler *handler.UserHandler) {
+func RegisterRoutes(router fiber.Router, userHandler *handler.UserHandler, followHandler *handler.FollowHandler) {
 	users := router.Group("/users")
 	
 	// Public routes
 	users.Get("/", userHandler.GetAllUsers)
 	users.Get("/:id", userHandler.GetUser)
+	users.Get("/:user_id/followers", followHandler.GetFollowers)
+	users.Get("/:user_id/following", followHandler.GetFollowing)
 	
 	// Protected routes
 	protected := users.Group("", middleware.JWTMiddleware(config.Get()))
 	protected.Post("/", userHandler.CreateUser)
+	protected.Post("/:user_id/follow", followHandler.ToggleFollow)
+	protected.Get("/:user_id/follow/status", followHandler.CheckFollowStatus)
 }
